[tool.poetry]
name = "multi-tool"
version = "0.1.0"
description = ""
authors = ["zondar__ <kirito98730tkm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.3.0"
customtkinter = "^5.2.2"
requests = "^2.32.4"
numexpr = "^2.11.0"
fitz = "^0.0.1.dev2"
docx = "^0.2.4"
python-docx = "^1.2.0"
pymupdf = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
