[project]
name = "multi-tool"
version = "2.1.0"
description = ""
authors = [
    {name = "Zondar__",email = "kirito98730tkm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "numexpr (>=2.11.0,<3.0.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "docx (>=0.2.4,<0.3.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
